test/official_tests/call/object.lox
class Foo {}

var foo = Foo();
foo(); // error: {"line":4,"message":"Only classes and functions are callable","type":"RuntimeError"}